fix view customer and satff

--- a/src/app/admin/article-manager/detail-article/detail-article.component.html
+++ b/src/app/admin/article-manager/detail-article/detail-article.component.html
@@ -231,7 +231,7 @@
                                             </div>
                                             <div class="photo_item col-md-2 col-3 js-photo-manual">
                                                 <div class="photo"><img
-                                                    src="{{article.image}}">                                                </div>
+                                                    src="{{article?.image}}">                                                </div>
                                                 <div class="dz-progress"><span class="dz-upload"></span></div>
                                                 <div class="bottom clearfix">
                                                     <span class="photo_delete" data-dz-remove="">
@@ -242,7 +242,7 @@
 
                                             <div class="photo_item col-md-2 col-3 js-photo-manual">
                                                 <div class="photo"><img
-                                                    src="{{article.image}}">                                                </div>
+                                                    src="{{article?.image}}">                                                </div>
                                                 <div class="dz-progress"><span class="dz-upload"></span></div>
                                                 <div class="bottom clearfix">
                                                     <span class="photo_delete" data-dz-remove="">
