--- a/src/app/admin/customer-manager/view-customer/view-customer.component.css
+++ b/src/app/admin/customer-manager/view-customer/view-customer.component.css
@@ -1,61 +1,471 @@
-
-/* CSS BUTOON THÊM NHÂN VIÊN */
-.addNguoidung{
-    margin-left: 600px;
-    margin-top: -45px;
-    position: relative; top: 9px;
+[role="main"] {
+  padding-top: 55px;
+  padding-left: 2rem;
+  /* padding-right: 3rem; */
+  padding-bottom: 4rem;
+}
+html {
+  font-size: 14px;
+}
+/* body {
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #000;
+} */
+.mobile {
+  display: none !important;
+}
+.tablet {
+  display: none !important;
+}
+.desktop {
+  display: block !important;
+}
+.user_quick_info {
+  color: #856404;
+  background-color: #fff3cd;
+  border-color: #ffeeba;
+  border-radius: 5px;
+  padding: 15px;
+  margin-bottom: 15px;
+  display: none;
+}
+.feather {
+  width: 16px;
+  height: 16px;
+  vertical-align: text-bottom;
+}
+.sidebar {
+  position: fixed;
+  top: 45px;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  display: block;
+  padding: 20px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  background-color: #fff;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+}
+.nav-sidebar {
+  margin-right: -21px;
+  margin-bottom: 15px;
+  margin-left: -20px;
+  padding: 0 10px;
+}
+.nav-sidebar .nav-item {
+  display: block;
+  width: 100%;
+}
+.sidebar .nav-link {
+  font-weight: normal;
+  color: #333;
+  display: flex;
+  align-items: center;
+  padding: 8px 10px;
+  border-bottom: 1px dashed #eee;
+}
+.sidebar .nav-link.active {
+  font-weight: bold;
+}
+.sidebar .nav-link:hover {
+  color: #000;
+  background: #f1f1f1;
+}
+.sidebar .nav-link svg {
+  margin-right: 10px;
+  color: #666;
+}
+.navbar {
+  background: #055699;
+  height: 45px;
+  -webkit-box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.2);
+}
+.navbar-brand {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #fff;
+}
+.navbar-brand:hover {
+  color: #fff;
+}
+.form-control-dark {
+  color: #fff;
+  background-color: rgb(19, 74, 119);
+  border-color: rgba(255, 255, 255, 0.1);
+}
+.navbar .form-control {
+  padding: 0.75rem 1rem;
+  border-width: 0;
+  border-radius: 0;
+}
+.navbar-nav .nav-link {
+  color: #fff;
+}
+.navbar-expand-md .navbar-nav .nav-link {
+  padding-left: 0.75rem;
+  padding-right: 1rem;
+  color: #fff;
+}
+.navbar-nav .nav-link:hover {
+  color: #f90;
+}
+#mobile_navbar_top .button-item,
+#mobile_navbar_top .account_button,
+#mobile_navbar_top .search_button,
+#mobile_navbar_top .mn_button {
+  display: none;
+}
+.dashboard .user_info {
+  margin-bottom: 15px;
+  padding-bottom: 10px;
+}
+.dashboard .user_info a:hover {
+  text-decoration: none;
+}
+.dashboard .user_info .user_avatar {
+  width: 50px;
+  height: 50px;
+  float: left;
+  border-radius: 50%;
+  overflow: hidden;
+  background: #eee;
+}
+.dashboard .user_info .user_avatar img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.dashboard .user_info .user_meta {
+  margin-left: 60px;
+  min-height: 60px;
+  align-items: center;
+  display: flex;
+  color: initial;
+}
+.dashboard .user_info .user_name {
+  font-weight: bold;
+  font-size: 1.2rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+table {
+  font-size: 0.9rem;
+}
+table thead {
+  font-weight: bold;
+}
+.table td,
+.table th {
+  vertical-align: middle;
+}
+.table_post_listing {
+  font-size: 0.9rem;
+}
+.table_post_listing td {
+  vertical-align: middle;
+}
+.table_post_listing .post_thumb {
+  overflow: hidden;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  position: relative;
+}
+.table_post_listing .post_thumb img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.table_post_listing .post_thumb .vip_icon {
+  pointer-events: none;
+  position: absolute;
+  background: #f03939;
+  color: #fff;
+  left: -34px;
+  top: -11px;
+  padding: 22px 30px 2px 28px;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 0.7rem;
+  -moz-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  box-shadow: 0 1px 5px #000;
+}
+.table_post_listing .post_title {
+  font-weight: bold;
+  font-size: 1rem;
+  color: #055699;
+}
+.table_post_listing .post_btn_toolbar .btn {
+  margin-right: 5px;
+  display: inline-flex;
+  align-items: center;
+  padding: 2px 5px;
+  border: 0;
+  background: #eee;
+  color: #000;
+}
+/* .table_post_listing .post_btn_toolbar .btn.btn_danglai {
+  color: #212529;
+  background-color: #ffc107;
+  border-color: #ffc107;
+} */
+.table_post_listing tr:hover .btn {
+  background: #ddd;
+}
+.table_post_listing .post_btn_toolbar .btn svg {
+  width: 12px;
+  height: 12px;
+  margin-right: 3px;
+}
+.table_post_listing .post_price {
+  color: #37a344;
+  white-space: nowrap;
+}
+.pagination .page-item {
+  margin: 0 3px 0 0;
+}
+.pagination .page-link {
+  color: #000;
+  background: #f1f1f1;
+  margin-left: 0;
+}
+.pagination .page-link:hover {
+  background: #ddd;
+}
+.pagination .page-item.disabled .page-link {
+  background: #f1f1f1;
+}
+.pagination .page-item.active .page-link {
+  background: #f90;
+  border-color: #f90;
 }
 
-
-.chonTatCa{
+.table_banggia .subpriceday {
+  display: block;
+  font-size: 11px;
+  color: green;
+}
+#form_dangtin h2,
+#form_dangtin h3 {
+  font-weight: bold;
+}
+#form_dangtin .browse_photos {
+  padding: 2rem;
+  background: #fff;
+  border: 2px dashed #bbb;
+  text-align: center;
+  cursor: copy;
+}
+.icon-upload-image {
+    /* background: url(../images/upload-image.png) center no-repeat; */
     display: block;
-    float: left;
-    padding-right: 10px;
-    white-space: nowrap;
+    background-size: contain;
+    width: 90px;
+    height: 90px;
+    margin: 0 auto 10px;
+    pointer-events: none;
+}
+.icon-upload-video {
+    /* background: url(../images/upload-video.png) center no-repeat; */
+    display: block;
+    background-size: contain;
+    width: 110px;
+    height: 100px;
+    margin: 0 auto;
+    pointer-events: none;
+}
+#form_dangtin .col-form-label {
+  font-weight: bold;
+  padding-bottom: 3px;
+}
+#form_dangtin .select2-container .select2-selection--single {
+  height: calc(2.25rem + 2px);
+  border-color: #ced4da;
+}
+#form_dangtin select.form-control,
+#form_dangtin
+  .select2-container--default
+  .select2-selection--single
+  .select2-selection__rendered {
+  line-height: 30px;
+  color: #495057;
+  border-color: #ced4da;
+}
+#form_dangtin .list_photos .photo_item {
+  padding-right: 0;
+  padding-left: 0;
+  margin-bottom: 20px;
+  cursor: move;
+  -webkit-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
+  margin-left: 15px;
+  margin-right: 9px;
+  background-color: #fff;
+}
+#form_dangtin .list_photos .photo_item.ui-sortable-helper {
+  border: 2px dashed #007bff;
+}
+#form_dangtin .list_photos .photo_item .photo_name {
+  display: none;
+}
+#form_dangtin .list_photos .photo_item .photo {
+  overflow: hidden;
+  width: 100%;
+  height: 110px;
+}
+#form_dangtin .list_photos .photo_item .photo img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+#form_dangtin .list_photos .photo_item .bottom {
+  text-align: center;
+  padding: 5px 0;
+}
+#form_dangtin .list_photos .photo_item .photo_delete {
+  cursor: pointer;
+  font-size: 0.9rem;
+}
+#form_dangtin .list_photos .photo_item .dz-progress .dz-upload {
+    display: block;
+    height: 5px;
+    background: #05a84e;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#form_dangtin .list_photos .photo_item.dz-complete .dz-progress {
+    display: none;
+}
+.addfund_method_list .method_item {
+  /* float: left; */
+  /* width: 220px; */
+  /* margin-right: 20px; */
+  /* display: flex;
+    flex-direction: column;
+    position: relative; */
+  margin-bottom: 30px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.addfund_method_list .method_item > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: #000;
+}
+.addfund_method_list .method_item > a:hover {
+  text-decoration: none;
+}
+.addfund_method_list .method_item:hover {
+  border-color: #0074e4;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+}
+.addfund_method_list .method_item:hover .btn_select_method {
+  background: #0074e4;
+  color: #fff;
+}
+.addfund_method_list .method_item:last-of-type {
+  margin-right: 0;
+}
+.addfund_method_list .method_item .method_item_icon {
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 0;
+  padding: 10px;
+}
+.addfund_method_list .method_item .method_item_icon img {
+  max-width: 160px;
+  max-height: 60px;
+}
+.addfund_method_list .method_item .method_item_name {
+  text-align: center;
+  padding: 10px 0px;
+  border-top: 0;
+  font-weight: bold;
+  background: #eee;
+}
+.addfund_method_list .method_item:hover .method_item_name {
+  background: #007bff;
+  color: #fff;
 }
 
-/* CSS CHO Ô TÌM KIẾM GÓC TRÁI */
-.search-box {
-    position: relative; top: 9px;      
-    float: right;
+a {
+  color: #272829;
+  text-decoration: none;
 }
-.search-box input {
-    height: 34px;
-    border-radius: 20px;
-    padding-left: 35px;
-    border-color: #ddd;
-    box-shadow: none;
-    margin-top: -36px;
+a:hover {
+  color: #F60;
 }
-.search-box input:focus {
-    border-color: #3FBAE4;
+h1 {
+  font: 1.7em;
+  line-height: 110%;
+  color: #000;
 }
-.search-box i {
-    color: #a0a5b1;
-    position: absolute;
-    /* font-size: 19px; */
-    top: 8px;
-    left: 10px;
-    margin-top: -37px;
+p {
+  margin: 0 0 20px;
+}
+
+
+input {
+  outline: none;
+}
+input[type=search] {
+  -webkit-appearance: textfield;
+  /* -webkit-box-sizing: content-box; */
+  font-family: inherit;
+  font-size: 100%;
+}
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button {
+  display: none; 
 }
 
 /* CSS CHO 3 NÚT THÊM XÓA SỬA */
 table.table td:last-child {
-    width: 130px;
+  width: 130px;
 }
 table.table td a {
-    color: #a0a5b1;
-    display: inline-block;
-    margin: 0 5px;
+  color: #a0a5b1;
+  display: inline-block;
+  margin: 0 5px;
 }
 table.table td a.view {
-    color: #03A9F4;
+  color: #03A9F4;
 }
 table.table td a.edit {
-    color: #FFC107;
+  color: #FFC107;
 }
 table.table td a.delete {
-    color: #E34724;
+  color: #E34724;
 }
-
-/* css chọn lọc */
+.texttr{
+  max-height: 50px;
+  max-width: 100px;
+}
+/* .textnd{
+  max-width: 300px;
+  height: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+} */
