--- a/src/app/admin/customer-manager/view-customer/view-customer.component.html
+++ b/src/app/admin/customer-manager/view-customer/view-customer.component.html
@@ -1,97 +1,83 @@
-<!-- Begin Page Content -->
-<div class="container-fluid">
-    <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Quản Lý người dùng</h1>
-    <!-- <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
-                    For more information about DataTables, please visit the <a target="_blank"
-                        href="https://datatables.net">official DataTables documentation</a>.</p> -->
+<div id="webpage">
+    <div class="container-fluid">
+        <div class="row" style="margin-left: -250px;">
+            <main role="main" class="ml-sm-auto col-lg-10" style="margin-top: -70px;">
+                <div
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+                    <h1 class="h2">Quản lý người dùng</h1>
 
-    <!-- DataTales Example -->
-    <div class="card shadow mb-4">
-        <form>
-        <div class="card-header py-3">
-            
-            <!-- thêm ô checkbox để chọn tất cả người dùng -->
-            <h6 class="font-weight-bold text-primary" id="danhsach"> <input type="checkbox" id="chonTatCa">  Danh sách người dùng</h6>
+                    <div class="btn-toolbar mb-2 mb-md-0">
+                        <div id="hic">
+                            <div id="demo-2">
+                                <input type="search" placeholder="Tìm kiếm" style="border: 1px solid #e6e6e6;">
+                            </div>
+                        </div>
+                        
+                        <div class="dropdown mr-1">
+                            <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button"
+                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                Lọc theo trạng thái
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item"
+                                    href="https://phongtro123.com/quan-ly/tin-dang.html?status=publish&amp;package=all">Tin
+                                    chưa duyệt</a>
+                                <a class="dropdown-item"
+                                    href="https://phongtro123.com/quan-ly/tin-dang.html?status=expired&amp;package=all">Tin
+                                    đã duyệt</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-            <!-- BUTTON THÊM người dùng -->
-            <div class="addNguoidung">
-                <button class="btn btn-primary btn-user" routerLink="create-customer" [disabled]="true">
-                    Thêm Người dùng
-                </button>
-            </div>
-
-            <!-- ô tìm kiếm -->
-            <div class="search-box">
-                <i class="material-icons">&#xE8B6;</i>
-                <input type="text" class="form-control" placeholder="Tìm kiếm Người dùng&hellip;">
-            </div>
+                <div class="d-none d-md-block">
+                    <div class="table-responsive">
+                        <table class="table table_post_listing table-bordered _table-hover">
+                            <thead>
+                                <tr>
+                                    <th>ID người dùng</th>
+                                    <th>Họ tên</th>
+                                    <th>Số dư TK</th>
+                                    <th>CMND</th>
+                                    <th>Địa chỉ</th>
+                                    <th>Ngày sinh</th>
+                                    <th>SĐT</th>
+                                    <th>Giới tính</th>
+                                    <th style="text-align: center; white-space: nowrap;">Ảnh đại diện</th>
+                                    <th>Chức năng</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let customer of customers"> <!--// customers lấy từ class view-customer.components.ts -->
+                                    <td>{{customer?.customerId}}
+                                        <br>  <!-- thêm ô checkbox để chọn từng người dùng  -->
+                                        <input type="checkbox" style="border-radius: 10px;">
+                                    </td>
+                                    <td>{{customer?.name}}</td>
+                                    <td>{{customer?.accountBalance}}</td>
+                                    <td>{{customer?.cardId}}</td>
+                                    <td>{{customer?.address}}</td>
+                                    <td>{{customer?.birthday | date:'dd/MM/yyyy'}}</td>
+                                    <td>{{customer?.phone}}</td>
+                                    <td *ngIf="customer.gender == true">Nam</td>
+                                    <td *ngIf="customer.gender == false">Nữ</td>
+                                    <td>
+                                        <div class="post_thumb">
+                                                <img src="{{customer?.image}}">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <a routerLink="detail-customer/{{customer?.customerId}}"  class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
+                                        <a routerLink="create-customer" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
+                                        <a routerLink="../customer" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons" >&#xE872;</i></a>  
+                                    </td>                                
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </main>
         </div>
-        
-        <div class="card-body">
-            <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" style="text-align: center;">
-                    <thead>
-                        <tr>
-                            <th>ID người dùng</th>
-                            <th>Họ tên</th>
-                            <th>Số dư TK</th>
-                            <th>CMND</th>
-                            <th>Email</th>
-                            <th>Địa chỉ</th>
-                            <th>Ngày sinh</th>
-                            <th>SĐT</th>
-                            <th>Giới tính</th>
-                            <th>Ảnh</th>
-                            <th>Chức năng</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                         <tr *ngFor="let customer of customers"> <!--// customers lấy từ class view-customer.components.ts -->
-                            <td>{{customer.customerId}}
-                                <br>  <!-- thêm ô checkbox để chọn từng người dùng  -->
-                                <input type="checkbox" style="border-radius: 10px;">
-                            </td>
-                            <td>{{customer.name}}</td>
-                            <td>{{customer.accountBalance}}</td>
-                            <td>{{customer.cardId}}</td>
-                            <td>{{customer.email}}</td>
-                            <td>{{customer.address}}</td>
-                            <td>{{customer.birthday | date:'dd/MM/yyyy'}}</td>
-                            <td>{{customer.phone}}</td>
-                            <td *ngIf="customer.gender == true">Nam</td>
-                            <td *ngIf="customer.gender == false">Nữ</td>
-                            <img src={{customer.image}} alt="" style="width: 80px; height: 100px; padding-top: 10px;"/>
-                            <td>
-                                <a routerLink="detail-customer/{{customer?.customerId}}"  class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
-                                <a routerLink="create-customer" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                                <a routerLink="../customer" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons" >&#xE872;</i></a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                      <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                          <span aria-hidden="true">&laquo;</span>
-                          <span class="sr-only">Previous</span>
-                        </a>
-                      </li>
-                      <li class="page-item"><a class="page-link" routerLink="/admin/customer" (click)="onPage(0)">1</a></li>
-                      <li class="page-item"><a class="page-link" routerLink="/admin/customer" (click)="onPage(1)">2</a></li>
-                      <li class="page-item"><a class="page-link" routerLink="/admin/customer" (click)="onPage(2)">3</a></li>
-                      <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                          <span aria-hidden="true">&raquo;</span>
-                          <span class="sr-only">Next</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </nav>
-            </div>
-        </div>
-    </form>
     </div>
-</div>
-<!-- /.container-fluid -->
+</div><!-- end webpage -->
