service active and hidden article

--- a/src/app/admin/article-manager/detail-article/detail-article.component.html
+++ b/src/app/admin/article-manager/detail-article/detail-article.component.html
@@ -271,8 +271,10 @@
                                         <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/BdPk9ipvczM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                                     </div>
                                 </div>
+                                <hr>
                                 <div class="form-group row">
-                                   <!-- ###  -->
+                                    <button type="button" class="btn btn-success" (click)="active()">Duyệt bài</button>
+                                    <button type="button" class="btn btn-secondary">Ẩn bài</button>
                                 </div>
                             </div>
                         </div>
