--- a/src/app/admin/customer-manager/view-customer/view-customer.component.html
+++ b/src/app/admin/customer-manager/view-customer/view-customer.component.html
@@ -12,7 +12,7 @@
                                 <input type="search" placeholder="Tìm kiếm" style="border: 1px solid #e6e6e6;">
                             </div>
                         </div>
-                        
+
                         <div class="dropdown mr-1">
                             <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button"
                                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
@@ -49,9 +49,10 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let customer of customers"> <!--// customers lấy từ class view-customer.components.ts -->
+                                <tr *ngFor="let customer of customers">
+                                    <!--// customers lấy từ class view-customer.components.ts -->
                                     <td>{{customer?.customerId}}
-                                        <br>  <!-- thêm ô checkbox để chọn từng người dùng  -->
+                                        <br> <!-- thêm ô checkbox để chọn từng người dùng  -->
                                         <input type="checkbox" style="border-radius: 10px;">
                                     </td>
                                     <td>{{customer?.name}}</td>
@@ -64,17 +65,43 @@
                                     <td *ngIf="customer.gender == false">Nữ</td>
                                     <td>
                                         <div class="post_thumb">
-                                                <img src="{{customer?.image}}">
+                                            <img src="{{customer?.image}}">
                                         </div>
                                     </td>
                                     <td>
-                                        <a routerLink="detail-customer/{{customer?.customerId}}"  class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
-                                        <a routerLink="create-customer" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                                        <a routerLink="../customer" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons" >&#xE872;</i></a>  
-                                    </td>                                
+                                        <a routerLink="detail-customer/{{customer?.customerId}}" class="view"
+                                            title="View" data-toggle="tooltip"><i
+                                                class="material-icons">&#xE417;</i></a>
+                                        <a routerLink="create-customer" class="edit" title="Edit"
+                                            data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
+                                        <a routerLink="../customer" class="delete" title="Delete"
+                                            data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item"><a class="page-link" routerLink="/admin/staff"
+                                        (click)="onPage(0)">1</a></li>
+                                <li class="page-item"><a class="page-link" routerLink="/admin/staff"
+                                        (click)="onPage(1)">2</a></li>
+                                <li class="page-item"><a class="page-link" routerLink="/admin/staff"
+                                        (click)="onPage(2)">3</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </main>
