--- a/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
@@ -1,7 +1,7 @@
 <div id="webpage">
     <div class="container-fluid">
         <div class="row" style="margin-left: -250px;">
-            <main role="main" class="ml-sm-auto col-lg-10" style="margin-top: -70px;">
+            <main role="main" class="ml-sm-auto col-lg-10" >
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
                     <h1 class="h2">Quản lý tin tức</h1>
