--- a/src/app/admin/article-manager/detail-article/detail-article.component.html
+++ b/src/app/admin/article-manager/detail-article/detail-article.component.html
@@ -21,11 +21,11 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label for="province_id" class="col-form-label">Tỉnh/Thành phố</label>
-                                            <select id="province_id" name="province_id"
+                                            <label id="province_id" name="province_id"
                                                 class="form-control js-select-tinhthanhpho select2-hidden-accessible"
                                                 required=""  data-msg-required="Chưa chọn Tỉnh/TP"  tabindex="-1"  aria-hidden="true" disabled>
-                                                <option value="">{{article?.address.cityName}}</option>                                       
-                                            </select>
+                                              {{article?.address.cityName}}                                  
+                                            </label>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
@@ -76,14 +76,10 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="diachi" class="col-form-label">Địa chỉ chính xác</label>
-                                            <!-- <input type="text" readonly="" class="form-control" name="dia_chi"
-                                                id="diachi" required=""
-                                                data-msg-required="Chưa chọn khu vực đăng tin"
-                                                value="174 Đường Trần Hữu Dực, Phường Phương Canh, Quận Nam Từ Liêm, Hà Nội"> -->
-                                                <output ype="text" readonly="" class="form-control" name="dia_chi"
-                                                id="diachi" required=""data-msg-required="Chưa chọn khu vực đăng tin">
+                                                <label ype="text" readonly="" class="form-control" name="dia_chi"
+                                                id="diachi" >
                                                 {{article?.address.wardName}}, {{article?.address.districtName}}, {{article?.address.cityName}}
-                                                </output>
+                                                </label>
                                         </div>
                                     </div>
                                 </div>
@@ -131,14 +127,14 @@
                                 <div class="form-group row">
                                     <label for="post_title" class="col-md-12 col-form-label">Tiêu đề</label>
                                     <div class="col-md-12">
-                                        <input type="text" class="form-control" name="tieu_de" id="post_title"
+                                        <label type="text" class="form-control" name="tieu_de" id="post_title"
                                             value="Nhà Trọ Phương Canh Giá Rẻ: 1tr2 25m2" minlength="30"
                                             maxlength="120" required=""
                                             data-msg-required="Tiêu đề không được để trống"
                                             data-msg-minlength="Tiêu đề quá ngắn"
                                             data-msg-maxlength="Tiêu đề quá dài" 
-                                            disabled
-                                            value="{{article?.title}}">                                            
+                                            value="">        {{article?.title}}                                    
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="form-group row">
@@ -153,15 +149,14 @@
                                     </div>
                                 </div>
                                 <div class="form-group row">
-                                    <label for="phone" class="col-md-12 col-form-label">Thông tin liên
-                                        hệ</label>
+                                    <label for="phone" class="col-md-12 col-form-label">Thông tin liên hệ</label>
                                     <div class="col-md-6">
                                         <div class="input-group mb-3">
-                                            <output id="phone" type="number" name="phone" class="form-control"
+                                            <label id="phone" type="number" name="phone" class="form-control"
                                                 readonly="readonly" required=""
                                                 data-msg-required="Số điện thoại" value="0365834845">
                                                 {{article?.customer.email}}
-                                            </output>
+                                            </label>
                                         </div>
                                     </div>
                                 </div>
@@ -199,7 +194,21 @@
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="form-group row">
+                                    <label for="post_acreage" class="col-md-12 col-form-label">Đối tượng</label>
+                                    <div class="col-md-6">
+                                        <div class="input-group mb-3">
+                                            <label id="form-control"  name="phone" class="form-control"
+                                                readonly="readonly" required=""
+                                                data-msg-required="Số điện thoại" value="0365834845">
+                                                Nam / Nữ
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- <div class="form-group row">
                                     <label for="post_acreage" class="col-md-12 col-form-label">Đối tượng</label>
                                     <div class="col-md-6">
                                         <div class="input-group mb-3">
@@ -208,7 +217,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="form-group row mt-5">
                                     <div class="col-md-12">
                                         <h3>Hình ảnh</h3>
