--- a/src/app/admin/staff-manager/view-staff/view-staff.component.css
+++ b/src/app/admin/staff-manager/view-staff/view-staff.component.css
@@ -1,5 +1,5 @@
 [role="main"] {
-  padding-top: 55px;
+  /* padding-top: 55px; */
   padding-left: 2rem;
   /* padding-right: 3rem; */
   padding-bottom: 4rem;
