--- a/src/app/admin/shared/modal-logout/modal-logout.component.html
+++ b/src/app/admin/shared/modal-logout/modal-logout.component.html
@@ -60,3 +60,22 @@
         </div>
     </div>
 </div>
+<!-- Client-Profile -->
+<!-- <div class="modal fade" id="client-profile" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true" *ngIf="isLoggedIn">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Bạn sẽ được chuyển đến trang nạp tiền?</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">Chọn "Đồng ý" bên dưới nếu bạn muốn chuyển đến trang nạp tiền.</div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Hủy bỏ</button>
+                <a class="btn btn-primary" routerLink="/admin/profile">Đồng ý</a>
+            </div>
+        </div>
+    </div>
+</div> -->
