--- a/src/app/admin/staff-manager/update-staff/update-staff.component.html
+++ b/src/app/admin/staff-manager/update-staff/update-staff.component.html
@@ -12,7 +12,7 @@
                         <form class="user" [formGroup]="staffForm" (ngSubmit)="updateStaff()">
                             <div class="form-group">
                                 <label> Email </label>
-                                <input type="email" [formControlName]="'email'" class="form-control form-control-user" placeholder="" disabled>
+                                <input type="email" [formControlName]="'email'" class="form-control form-control-user" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label> Họ và tên </label>
