--- a/src/app/admin/newspaper-manager/detail-newspaper/detail-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/detail-newspaper/detail-newspaper.component.html
@@ -12,6 +12,16 @@
                 <div class="content-panel">
                     <h1 class="title">CHI TIẾT BÀI VIẾT</h1>
 
+                    <div class="form-group">
+                        <!-- <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
+                            <button class="btn btn-primary" type="submit">Update Profile</button>
+                        </div> -->
+                        <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
+                            <button class="btn btn-success" type="submit" *ngIf="news?.deleted == true" (click)="activeNews()" [ngStyle]="{'margin-right':'10px'}">Kích hoạt bài viết</button>
+                            <button class="btn btn-danger" type="submit" *ngIf="news?.deleted == false" (click)="hiddenNews()">Ẩn bài viết</button>
+                        </div>
+                      </div>
+
                     <form class="form-horizontal" [formGroup]="newsPaperForm">
                         <fieldset class="fieldset">
                             <!-- <h3 class="fieldset-title">Thông tin cá nhân</h3> -->
