--- a/src/app/admin/staff-manager/detail-staff/detail-staff.component.html
+++ b/src/app/admin/staff-manager/detail-staff/detail-staff.component.html
@@ -22,10 +22,15 @@
                     <h1 class="title">CHI TIẾT NHÂN VIÊN</h1>
 
                     <div class="form-group">
+                      <!-- <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
+                          <button class="btn btn-primary" type="submit">Update Profile</button>
+                      </div> -->
                       <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
-                          <input class="btn btn-primary" type="submit" value="Update Profile">
+                          <button class="btn btn-success" type="submit" *ngIf="staff?.deleted == true" (click)="activeStaff()" [ngStyle]="{'margin-right':'10px'}">Kích hoạt nhân viên</button>
+                          <button class="btn btn-danger" type="submit" *ngIf="staff?.deleted == false" (click)="blockStaff()">Khóa nhân viên</button>
                       </div>
-                  </div>
+                    </div>
+                    
                     <form class="form-horizontal">
                         <fieldset class="fieldset">
                             <h3 class="fieldset-title">Thông tin cá nhân </h3>
