--- a/src/app/admin/article-manager/view-article/view-article.component.html
+++ b/src/app/admin/article-manager/view-article/view-article.component.html
@@ -57,7 +57,10 @@
                                 <tr>
                                     <th>Mã tin</th>
                                     <th style="text-align: center; white-space: nowrap;">Ảnh đại diện</th>
-                                    <th>Tiêu đề</th>
+                                    <th>Tiêu đề
+                                        <br/>
+                                        (Ấn để xem chi tiết bài viết)
+                                    </th>
                                     <th>Giá</th>
                                     <th style="white-space: nowrap;">Ngày bắt đầu</th>
                                     <th style="white-space: nowrap;">Ngày hết hạn</th>
