--- a/src/app/admin/customer-manager/detail-customer/detail-customer.component.html
+++ b/src/app/admin/customer-manager/detail-customer/detail-customer.component.html
@@ -19,12 +19,12 @@
                 </div>
                 <div class="content-panel">
                     <h1 class="title">CHI TIẾT NGƯỜI DÙNG</h1>
-
+<!-- 
                     <div class="form-group">
                       <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
-                          <input class="btn btn-primary" type="submit" value="activation người dùng">
+                          <label class="btn btn-primary" type="submit" value="activation người dùng"> </label>
                       </div>
-                  </div>
+                  </div> -->
                     <form class="form-horizontal">
                         <fieldset class="fieldset">
                             <h3 class="fieldset-title">Thông tin cá nhân </h3>
@@ -32,28 +32,28 @@
                             <div class="form-group">
                               <label class="col-md-2 col-sm-3 col-xs-12 control-label">Mã người dùng: </label> 
                               <div class="col-md-10 col-sm-9 col-xs-12">
-                                  <input type="text" class="form-control" value="{{customer?.customerId}}">
+                                  <label type="text" class="form-control" value="" tabindex="-1">{{customer?.customerId}}</label>
                               </div>
                           </div>
                             <!-- TÊN -->
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Họ tên: </label> 
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="{{customer?.name}}">
+                                    <label type="text" class="form-control" value="" tabindex="-1">{{customer?.name}}</label>
                                 </div>
                             </div>
                             <!-- Số dư tài khoản -->
                             <div class="form-group">
                               <label class="col-md-2 col-sm-3 col-xs-12 control-label">Số dư tài khoản: </label> 
                               <div class="col-md-10 col-sm-9 col-xs-12">
-                                  <input type="text" class="form-control" value="{{customer?.accountBalance}}">
+                                  <label type="text" class="form-control" value="" tabindex="-1">{{customer?.accountBalance}}</label>
                               </div>
                             </div>
                              <!-- Chứng minh nd - căn cước -->
                             <div class="form-group">
                                 <label class="col-md-4 col-sm-3 col-xs-12 control-label">Chứng minh nd - căn cước: </label> 
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                  <input type="text" class="form-control" value="{{customer?.cardId}}">
+                                  <label type="text" class="form-control" value="" tabindex="-1">{{customer?.cardId}}</label>
                                 </div>
                             </div>
 
@@ -61,10 +61,10 @@
                             <div class="form-group">
                               <label class="col-md-2 col-sm-3 col-xs-12 control-label">Giới tính: </label> 
                               <div class="col-md-10 col-sm-9 col-xs-12" *ngIf="customer?.gender == true">
-                                  <input type="text" class="form-control" value="Nam">
+                                  <label type="text" class="form-control" value="" tabindex="-1">Nam</label>
                               </div>
                               <div class="col-md-10 col-sm-9 col-xs-12" *ngIf="customer?.gender == false">
-                                <input type="text" class="form-control" value="Nữ">
+                                <label type="text" class="form-control" value="" tabindex="-1">Nữ</label>
                             </div>
                             </div>  
                             
@@ -72,7 +72,7 @@
                             <div class="form-group">
                               <label class="col-md-2 col-sm-3 col-xs-12 control-label">Ngày sinh: </label> 
                               <div class="col-md-10 col-sm-9 col-xs-12">
-                                  <input type="text" class="form-control" value="{{customer?.birthday | date:'dd/MM/yyyy'}}">
+                                  <label type="text" class="form-control" value="" tabindex="-1">{{customer?.birthday | date:'dd/MM/yyyy'}}</label>
                               </div>
                             </div> 
                         </fieldset>
@@ -83,7 +83,7 @@
                             <div class="form-group">
                                 <label class="col-md-2  col-sm-3 col-xs-12 control-label">Email</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="email" class="form-control" value="{{customer?.email}}">
+                                    <label type="email" class="form-control" value="" tabindex="-1"> {{customer?.email}}</label>
                                 </div>
                             </div>
 
@@ -91,7 +91,7 @@
                             <div class="form-group">
                                 <label class="col-md-2  col-sm-3 col-xs-12 control-label">Địa chỉ</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="{{customer?.address}}">
+                                    <label type="text" class="form-control" value="" tabindex="-1">{{customer?.address}}</label>
                                     <!-- <p class="help-block">Địa chỉ hiện tại</p> -->
                                 </div>
                             </div>
@@ -100,7 +100,7 @@
                             <div class="form-group">
                                 <label class="col-md-2  col-sm-3 col-xs-12 control-label">Số điện thoại</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="url" class="form-control" value="{{customer?.phone}}">
+                                    <label type="url" class="form-control" value="" tabindex="-1"> {{customer?.phone}}</label>
                                     <!-- <p class="help-block">eg. https://www.linkedin.com/in/yourname</p> -->
                                 </div>
                             </div>
