--- a/src/app/admin/customer-manager/detail-customer/detail-customer.component.html
+++ b/src/app/admin/customer-manager/detail-customer/detail-customer.component.html
@@ -22,7 +22,8 @@
 
                     <div class="form-group">
                       <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
-                          <input class="btn btn-primary" type="submit" value="activation người dùng">
+                        <button class="btn btn-success" type="submit" *ngIf="customer?.deleted == true" (click)="activeCustomers()" [ngStyle]="{'margin-right':'10px'}">Kích hoạt người dùng</button>
+                        <button class="btn btn-danger" type="submit" *ngIf="customer?.deleted == false" (click)="blockCustomers()">Khóa người dùng</button>
                       </div>
                   </div>
                     <form class="form-horizontal">
